--- a/Carshop/assets/css/bodyCSS.css
+++ b/Carshop/assets/css/bodyCSS.css
@@ -1,11 +1,13 @@
+
+#wrapper {
+    padding-bottom: -150px;   /* Height of the footer element */
+}
+
 #footer {
     background: #6699CC;
-    width:100%;
+    width: 100%;
     position: absolute;
     color: #eee;
     padding:20px;
     height: 150px;
-    bottom:0px;;
-    
 }
-
